--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Hello World</p>
     <p>This is a second line</p>
     <h1>Hello World</h1>
+    <p>This is user 2 writing. Time for an update</p>
 </body>
 </html>
